@@ -361,6 +361,9 @@ namespace GLib {
 			g_object_set_property (Raw, name, val.Handle);
 		}
 
+		[DllImport("libgobject-2.0-0.dll")]
+		protected static extern void g_signal_chain_from_overridden (IntPtr[] args, IntPtr retval);
+
 		[DllImport("gtksharpglue")]
 		static extern bool gtksharp_is_object (IntPtr obj);
 
