@@ -1,5 +1,11 @@
 2003-12-08  Mike Kestner  <mkestner@ximian.com>
 
+	* generator/Signal.cs : add virtual method generation for the 
+	default signal handlers.
+	* glib/Object.cs : add g_signal_chain_from_overridden extern
+
+2003-12-08  Mike Kestner  <mkestner@ximian.com>
+
 	* generator/VMSignature.cs : new class to generate virtual method
 	signatures for default signal handlers.
 
